spacing fix

--- a/src/styles/components/products/productDetail.css
+++ b/src/styles/components/products/productDetail.css
@@ -306,6 +306,17 @@
   height: 100%;
   border-radius: 0%;
 }
+.size_div {
+  padding-inline:   1.5rem ;
+  border: 1px solid #a5a5a5;
+  height: 3rem;
+  border-radius: 0%;
+}
+.size_inner {
+  width: 100%;
+  height: 100%;
+  border-radius: 0%;
+}
 .color_inner p{
   transform: translateY(0px);
 }
